[package]
name = "conman"
description = "Configuration manager"
license = "GPL-3"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "~4"
regex = "~1"
open = "~3"
chrono = "~0"
rpassword = "~6"
clap = { version = "~3", features = ["derive"] }
serde = { version = "~1", features = ["derive"] }
serde_yaml = "~0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
